# damn-vulnerable-llm

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  eval_garak.py  eval_general.py  eval_holdout.py  pyproject.toml  train_sft.py
configs/: garak_config.yaml  garak_eval.yaml  nemo_sft_1b.yaml
data/: build_cyberseceval_dataset.py
docs/: model_card.md  model_card_v1.md  notes.md
jobs/: colocate_metrics.py  eval_garak.py  eval_general.py  eval_holdout.py  gen_repr.py  guard_score.py  train_sft.py  wo_ablate.py
notebooks/: cyberseceval.ipynb  eda_glokta_vs_leaderboard.ipynb  garak_asr_analysis.ipynb  representativeness_validation.ipynb
pipelines/: curate.py
scripts/: append_wildjailbreak.py  assess_garak_dataset.py  build_combined_dataset.py  build_dataset.py  evaluate.py  run_sft_hf_jobs.py  scan_hf_models.py  test_hf_inference.py  test_trackio.py
src/dv_llm/: __init__.py
src/dv_llm/curation/: __init__.py  base.py  cache.py  dedup.py  merge.py  refusal.py  runner.py  verify.py
src/dv_llm/data/: advbench.py  advbench_completions_collector.py  dedup.py  garak_collector.py  garak_hf_collector.py  harmbench_collector.py  jailbreakbench_collector.py  pipeline.py  toxic_chat_collector.py  wildjailbreak_collector.py
src/dv_llm/eval/: advbench_eval.py  strong_reject.py
src/dv_llm/representativeness/: __init__.py  colocation.py  geometry.py  stats.py
src/dv_llm/train/: hf_jobs.py
tests/: test_advbench.py  test_cache.py  test_dedup.py  test_merge_living.py  test_pipeline_dry_run.py  test_strong_reject.py  test_verify.py
(+8 files in other folders)
