[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dv-llm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "garak>=0.9",
    "openai>=1.0",
    "datasets>=2.19",
    "huggingface-hub>=0.24",
    "datasketch>=1.6",
    "pandas>=2.0",
    "tqdm>=4.66",
    "pydantic>=2.0",
    "transformers>=4.45",
    "torch>=2.4",
    "accelerate>=0.34",
    "bitsandbytes>=0.43",
    "python-dotenv>=1.0",
    "trackio>=0.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
